--- a/index.html
+++ b/index.html
@@ -12,59 +12,62 @@
 </head>
 
 <body>
-    <header class="estiloHeader">
-        <div>
-            <img src="./Imagenes/Logo.jpg" id="Logo" alt="Logo Desarrollos Licen">
-        </div>
-        <nav>
-            <ul class="gralNav">
-                <li><a href="">Inicio</a>
-                </li>
-                <li>
-                    <a href="./Paginas/SobreNosotros.html">Sobre Nosotros</a>
-                </li>
-                <li>
-                    <a href="./Paginas/Servicios.html">Servicios</a>
-                </li>
-                <li>
-                    <a href="./Paginas/Proyectos.html">Proyectos</a>
-                </li>
-                <li>
-                    <a href="./Paginas/Contacto.html">Contacto</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main class="espacioGralInicio">
-        <section>
-            <h1>Hacemos relidad tus ideas</h1>
-    </main>
-    <footer class="estiloFooter">
-        <div>
-            <img src="../Imagenes/Logo.jpg" id="Logo" alt="Logo Desarrollos Licen">
-        </div>
-        <div class="textoPiePaginas">
-            <p>Licen SLR es un equipo de trabajo con 10 años de constante crecimiento.
-                Iniciando con tres personas en el equipo y al cabo de pocos años superan las 20 personas.
-                Desarrollamos proyectos de diferentes tipologias y dimensiones alcanzando proyectos de 40.0000m2 de
-                envergadura
-            </p>
-        </div>
-        <div class="infoAdicional">
-            <h2>¿Donde estamos?</h2>
-            <ul class="infoAdicional">
-                <li>Calle falsa 456</li>
-            </ul>
-        </div>
-        <div class="enlacesRedes">
-            <a href="http://www.facebook.com/?locale=es_LA" target="_blank" rel="noopener noreferrer">Facebook</a>
-            <a href="http://www.instagram.com/" target="_blank" rel="noopener noreferrer">Instagram</a>
-            <a href="http://www.linkedin.com/home" target="_blank" rel="noopener noreferrer">Linkedin</a>
-        </div>
-        <div class="enlacesRedes">
-            <a href="">Unete al equipo</a>
-            <a href="./Paginas/Contacto.html">Contacto</a>
-        </div>
+    <div class="GrillaGralIndex">
+        <header class="estiloHeader GrillaHeader">
+            <div>
+                <img src="./Imagenes/Logo.jpg" id="Logo" alt="Logo Desarrollos Licen">
+            </div>
+            <nav>
+                <ul class="gralNav">
+                    <li><a href="">Inicio</a>
+                    </li>
+                    <li>
+                        <a href="./Paginas/SobreNosotros.html">Sobre Nosotros</a>
+                    </li>
+                    <li>
+                        <a href="./Paginas/Servicios.html">Servicios</a>
+                    </li>
+                    <li>
+                        <a href="./Paginas/Proyectos.html">Proyectos</a>
+                    </li>
+                    <li>
+                        <a href="./Paginas/Contacto.html">Contacto</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <main class="espacioGralInicio GrillaMain estiloMain">
+            <section>
+                <h1>Hacemos relidad tus ideas</h1>
+            </section>
+        </main>
+        <footer class="estiloFooter GrillaFooter">
+            <div>
+                <img src="../Imagenes/Logo.jpg" id="Logo" alt="Logo Desarrollos Licen">
+            </div>
+            <div class="textoPiePaginas">
+                <p>Licen SLR es un equipo de trabajo con 10 años de constante crecimiento.
+                    Iniciando con tres personas en el equipo y al cabo de pocos años superan las 20 personas.
+                    Desarrollamos proyectos de diferentes tipologias y dimensiones alcanzando proyectos de 40.0000m2 de
+                    envergadura
+                </p>
+            </div>
+            <div class="infoAdicional">
+                <h2>¿Donde estamos?</h2>
+                <ul class="infoAdicional">
+                    <li>Calle falsa 456</li>
+                </ul>
+            </div>
+            <div class="enlacesRedes">
+                <a href="http://www.facebook.com/?locale=es_LA" target="_blank" rel="noopener noreferrer">Facebook</a>
+                <a href="http://www.instagram.com/" target="_blank" rel="noopener noreferrer">Instagram</a>
+                <a href="http://www.linkedin.com/home" target="_blank" rel="noopener noreferrer">Linkedin</a>
+            </div>
+            <div class="enlacesRedes">
+                <a href="">Unete al equipo</a>
+                <a href="./Paginas/Contacto.html">Contacto</a>
+            </div>
+    </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
