Cambie los header y footer en todas las paginas

--- a/Paginas/Servicios.html
+++ b/Paginas/Servicios.html
@@ -13,27 +13,36 @@
 
 <body>
     <header class="estiloHeader">
-        <div>
-            <img src="../Imagenes/Logo.jpg" id="Logo" alt="Logo Desarrollos Licen">
-        </div>
-        <nav>
-            <ul class="gralNav">
-                <li>
-                    <a href="../index.html">Inicio</a>
-                </li>
-                <li>
-                    <a href="./SobreNosotros.html">Sobre Nosotros</a>
-                </li>
-                <li>
-                    <a href="#">Servicios</a>
-                </li>
-                <li>
-                    <a href="./Proyectos.html">Proyectos</a>
-                </li>
-                <li>
-                    <a href="./Contacto.html">Contacto</a>
-                </li>
-            </ul>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"></a>
+                <img class="logoLicen" src="../Imagenes/Logo.jpg" alt="Logo">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ubNav">
+                        <li class="nav-item">
+                            <a class="nav-link active " aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./SobreNosotros.html">Sobre
+                                Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./Proyectos.html">Proyectos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./Contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
@@ -95,9 +104,9 @@
             </div>
         </section>
     </main>
-    <footer class="estiloFooter">
+    <footer class="estiloFooter GrillaFooter">
         <div>
-            <img src="../Imagenes/Logo.jpg" id="Logo" alt="Logo Desarrollos Licen">
+            <img class="logoLicen2" src="../Imagenes/Logo.jpg" id="Logo" alt="Logo Desarrollos Licen">
         </div>
         <div class="textoPiePaginas">
             <p>Licen SLR es un equipo de trabajo con 10 años de constante crecimiento.
@@ -113,18 +122,25 @@
             </ul>
         </div>
         <div class="enlacesRedes">
-            <a href="http://www.facebook.com/?locale=es_LA" target="_blank" rel="noopener noreferrer">Facebook</a>
-            <a href="http://www.instagram.com/" target="_blank" rel="noopener noreferrer">Instagram</a>
-            <a href="http://www.linkedin.com/home" target="_blank" rel="noopener noreferrer">Linkedin</a>
+            <a href="http://www.facebook.com/?locale=es_LA" target="_blank" rel="noopener noreferrer"><iconify-icon
+                    icon="devicon:facebook"></iconify-icon></a>
+            <a href="http://www.instagram.com/" target="_blank" rel="noopener noreferrer"><iconify-icon
+                    icon="skill-icons:instagram"></iconify-icon></a>
+            <a href="http://www.linkedin.com/home" target="_blank" rel="noopener noreferrer"><iconify-icon
+                    icon="devicon:linkedin"></iconify-icon></a>
         </div>
-        <div class="enlacesRedes">
+        <div class="enlacesRedes2">
             <a href="./Contacto.html">Unete al equipo</a>
             <a href="./Contacto.html">Contacto</a>
+        </div>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 </body>
 
 </html>
