--- a/index.html
+++ b/index.html
@@ -12,38 +12,83 @@
 </head>
 
 <body>
-    <div class="GrillaGralIndex">
-        <header class="estiloHeader GrillaHeader">
-            <div>
-                <img src="./Imagenes/Logo.jpg" id="Logo" alt="Logo Desarrollos Licen">
-            </div>
-            <nav>
-                <ul class="gralNav">
-                    <li><a href="">Inicio</a>
-                    </li>
-                    <li>
-                        <a href="./Paginas/SobreNosotros.html">Sobre Nosotros</a>
-                    </li>
-                    <li>
-                        <a href="./Paginas/Servicios.html">Servicios</a>
-                    </li>
-                    <li>
-                        <a href="./Paginas/Proyectos.html">Proyectos</a>
-                    </li>
-                    <li>
-                        <a href="./Paginas/Contacto.html">Contacto</a>
-                    </li>
-                </ul>
+    <div>
+        <header>
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"></a>
+                    <img class="logoLicen" src="./Imagenes/Logo.jpg" alt="Logo">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0 ubNav">
+                            <li class="nav-item">
+                                <a class="nav-link active " aria-current="page" href="#">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="./Paginas/SobreNosotros.html">Sobre
+                                    Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page"
+                                    href="./Paginas/Proyectos.html">Proyectos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page"
+                                    href="./Paginas/Servicios.html">Servicios</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page"
+                                    href="./Paginas/Contacto.html">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </nav>
         </header>
         <main class="espacioGralInicio GrillaMain estiloMain">
             <section>
                 <h1>Hacemos relidad tus ideas</h1>
             </section>
+            <div id="carouselExampleIndicators" class="carousel slide">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./Imagenes/Desarrollos Inmobiliarios render.jpg" class="d-block w-100"
+                            alt="Render ciudad">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./Imagenes/Clinica 1.jpg" class="d-block w-100" alt="Render de Casa">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./Imagenes/Clinica 2.jpg" class="d-block w-100" alt="Render de habitacion de hotel">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
         </main>
         <footer class="estiloFooter GrillaFooter">
             <div>
-                <img src="../Imagenes/Logo.jpg" id="Logo" alt="Logo Desarrollos Licen">
+                <img class="logoLicen2" src="./Imagenes/Logo.jpg" id="Logo" alt="Logo Desarrollos Licen">
             </div>
             <div class="textoPiePaginas">
                 <p>Licen SLR es un equipo de trabajo con 10 años de constante crecimiento.
@@ -59,11 +104,14 @@
                 </ul>
             </div>
             <div class="enlacesRedes">
-                <a href="http://www.facebook.com/?locale=es_LA" target="_blank" rel="noopener noreferrer">Facebook</a>
-                <a href="http://www.instagram.com/" target="_blank" rel="noopener noreferrer">Instagram</a>
-                <a href="http://www.linkedin.com/home" target="_blank" rel="noopener noreferrer">Linkedin</a>
+                <a href="http://www.facebook.com/?locale=es_LA" target="_blank" rel="noopener noreferrer"><iconify-icon
+                        icon="devicon:facebook"></iconify-icon></a>
+                <a href="http://www.instagram.com/" target="_blank" rel="noopener noreferrer"><iconify-icon
+                        icon="skill-icons:instagram"></iconify-icon></a>
+                <a href="http://www.linkedin.com/home" target="_blank" rel="noopener noreferrer"><iconify-icon
+                        icon="devicon:linkedin"></iconify-icon></a>
             </div>
-            <div class="enlacesRedes">
+            <div class="enlacesRedes2">
                 <a href="">Unete al equipo</a>
                 <a href="./Paginas/Contacto.html">Contacto</a>
             </div>
@@ -72,6 +120,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 </body>
 
 </html>
