Prueba 2 del hub

--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
 <body>
     <div>
         <header>
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"></a>
-                    <img class="logoLicen" src="./Imagenes/Logo.jpg" alt="Logo">
+                    <a class="navbar-brand" href="#"><img class="logoLicen" src="./Imagenes/Logo.jpg" alt="Logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -90,12 +89,12 @@
             <div>
                 <img class="logoLicen2" src="./Imagenes/Logo.jpg" id="Logo" alt="Logo Desarrollos Licen">
             </div>
-            <div class="textoPiePaginas">
+            <!-- <div class="textoPiePaginas">
                 <p>Licen SLR es un equipo de trabajo con 10 años de constante crecimiento.
                     Iniciando con tres personas en el equipo y al cabo de pocos años superan las 20 personas.
                     Desarrollamos proyectos de diferentes tipologias y dimensiones alcanzando proyectos de 40.0000m2 de
                     envergadura
-                </p>
+                </p> -->
             </div>
             <div class="infoAdicional">
                 <h2>¿Donde estamos?</h2>
