Prueba 3 del hub

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         </header>
         <main class="espacioGralInicio GrillaMain estiloMain">
             <section>
-                <h1>Hacemos relidad tus ideas</h1>
-            </section>
+                <h1> QUE ONDA GATOO FUNCIONA?? Hacemos relidad tus ideas</h1>
+                            </section>
             <div id="carouselExampleIndicators" class="carousel slide">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
