--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <body>
     <div>
-        <header>
+
+        <header id="header" class="d-flex flex-column justify-content-center">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#"><img class="logoLicen" src="./Imagenes/Logo.jpg" alt="Logo"></a>
@@ -23,99 +24,114 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0 ubNav">
-                            <li class="nav-item">
-                                <a class="nav-link active " aria-current="page" href="#">Inicio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./Paginas/SobreNosotros.html">Sobre
-                                    Nosotros</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page"
-                                    href="./Paginas/Proyectos.html">Proyectos</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page"
-                                    href="./Paginas/Servicios.html">Servicios</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page"
-                                    href="./Paginas/Contacto.html">Contacto</a>
-                            </li>
-                        </ul>
+                        <div class="row justify-content-center">
+                            <ul class="nav-menu me-auto mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="#">Inicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="./Paginas/SobreNosotros.html">Sobre Nosotros</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="./Paginas/Proyectos.html">Proyectos</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="./Paginas/Servicios.html">Servicios</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="./Paginas/Contacto.html">Contacto</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </nav>
         </header>
-        <main class="espacioGralInicio GrillaMain estiloMain">
-            <section>
-                <h1> QUE ONDA GATOO FUNCIONA?? Hacemos relidad tus ideas</h1>
-                            </section>
-            <div id="carouselExampleIndicators" class="carousel slide">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                        class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
+
+        <main id="imagenCentral" class="d-flex flex-column justify-content-center">
+            <div class="" data-aos="zoom-in" data-aos-delay="100">
+                <div id="carouselExampleIndicators" class="carousel slide">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./Imagenes/Desarrollos Inmobiliarios render.jpg" class="d-block w-100"
+                                alt="Render ciudad">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./Imagenes/Clinica 1.jpg" class="d-block w-100" alt="Render de Casa">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./Imagenes/Clinica 2.jpg" class="d-block w-100"
+                                alt="Render recepcion de Clinica">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="./Imagenes/Desarrollos Inmobiliarios render.jpg" class="d-block w-100"
-                            alt="Render ciudad">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./Imagenes/Clinica 1.jpg" class="d-block w-100" alt="Render de Casa">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./Imagenes/Clinica 2.jpg" class="d-block w-100" alt="Render de habitacion de hotel">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
         </main>
-        <footer class="estiloFooter GrillaFooter">
-            <div>
-                <img class="logoLicen2" src="./Imagenes/Logo.jpg" id="Logo" alt="Logo Desarrollos Licen">
+
+         <footer class="bg-light estiloFooter">
+            <div class="container-fluid">
+                <div class="row justify-content-center">
+
+                    <div class="col-lg-2 text-center align-items-center justify-content-center">
+                        <img class="logoLicen2" src="./Imagenes/Logo.jpg" id="Logo" alt="Logo Desarrollos Licen">
+                    </div>
+
+                    <div class="col-lg-4 text-center align-items-center textoPiePaginas">
+                        <p>Licen SLR es un equipo de trabajo con 10 años de constante crecimiento.
+                            Iniciando con tres personas en el equipo y al cabo de pocos años superan las 20 personas.
+                            Desarrollamos proyectos de diferentes tipologias y dimensiones alcanzando proyectos de
+                            40.0000m2 de envergadura
+                        </p>
+                    </div>
+
+                    <div class="col-lg-2 text-center align-items-center justify-content-center infoAdicional">
+                        <h2>¿Donde estamos?<br />Calle falsa 456</h2>
+                    </div>
+                    
+                    <div class="col-lg-2 row justify-content-center text-center align-items-center enlacesRedes">
+                        <div>
+                            <a class="col-lg-4" href="http://www.facebook.com/?locale=es_LA" target="_blank"
+                                rel="noopener noreferrer">
+                                <iconify-icon icon="devicon:facebook"></iconify-icon>
+                            </a>
+                            <a class="col-lg-4" href="http://www.instagram.com/" target="_blank"
+                                rel="noopener noreferrer">
+                                <iconify-icon icon="skill-icons:instagram"></iconify-icon>
+                            </a>
+                            <a class="col-lg-4" href="http://www.linkedin.com/home" target="_blank"
+                                rel="noopener noreferrer">
+                                <iconify-icon icon="devicon:linkedin"></iconify-icon>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-2 text-center align-items-center justify-content-center enlacesRedes2">
+                        <a href="./Paginas/Contacto.html">Unete al equipo</a><br />
+                        <a href="./Paginas/Contacto.html">Contacto</a>
+                    </div>
+
+                </div>
             </div>
-            <!-- <div class="textoPiePaginas">
-                <p>Licen SLR es un equipo de trabajo con 10 años de constante crecimiento.
-                    Iniciando con tres personas en el equipo y al cabo de pocos años superan las 20 personas.
-                    Desarrollamos proyectos de diferentes tipologias y dimensiones alcanzando proyectos de 40.0000m2 de
-                    envergadura
-                </p> -->
-            </div>
-            <div class="infoAdicional">
-                <h2>¿Donde estamos?</h2>
-                <ul class="infoAdicional">
-                    <li>Calle falsa 456</li>
-                </ul>
-            </div>
-            <div class="enlacesRedes">
-                <a href="http://www.facebook.com/?locale=es_LA" target="_blank" rel="noopener noreferrer"><iconify-icon
-                        icon="devicon:facebook"></iconify-icon></a>
-                <a href="http://www.instagram.com/" target="_blank" rel="noopener noreferrer"><iconify-icon
-                        icon="skill-icons:instagram"></iconify-icon></a>
-                <a href="http://www.linkedin.com/home" target="_blank" rel="noopener noreferrer"><iconify-icon
-                        icon="devicon:linkedin"></iconify-icon></a>
-            </div>
-            <div class="enlacesRedes2">
-                <a href="">Unete al equipo</a>
-                <a href="./Paginas/Contacto.html">Contacto</a>
-            </div>
-    </div>
-    </footer>
+        </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
