Responsive en sobre nosotros

--- a/Paginas/SobreNosotros.html
+++ b/Paginas/SobreNosotros.html
@@ -48,30 +48,38 @@
     </header>
 
     <main class="cuerpoSobreNosotros">
-        <section class="textoDescriptivo">
-            <h1>¿Quienes somos?</h1>
-            <p>Somos un equipo compuesto enteramente por profesionales especializados en el desarrollo de proyectos
-                y ejecución de obras. Nuestro departamento de Arquitectura posee una vasta experiencia en el diseño
-                y planificación de viviendas unifamiliares, multifamiliares, oficinas, predios deportivos, locales
-                gastronomicos y hoteleria tanto en la Ciudad de Buenos Aires como en la Provincia de Buenos Aires.
-                Nuestra gran trayectoria en el área del diseño y la construcción permite obtener resultados funcionales,
-                creativos y de alta calidad.</p>
-        </section>
-        <div>
-            <img src="../Imagenes/Trabajo en equipo.jpg" alt="Imagen representativa de Licen">
+        <div class="row">
+            <div class="justify-content-center align-items-center text-center">
+                <h1 class="mt-3">¿Quienes somos?</h1>
+                <p class="textoDescriptivo">Somos un equipo compuesto enteramente por profesionales especializados en el
+                    desarrollo de proyectos
+                    y ejecución de obras. Nuestro departamento de Arquitectura posee una vasta experiencia en el diseño
+                    y planificación de viviendas unifamiliares, multifamiliares, oficinas, predios deportivos, locales
+                    gastronomicos y hoteleria tanto en la Ciudad de Buenos Aires como en la Provincia de Buenos Aires.
+                    Nuestra gran trayectoria en el área del diseño y la construcción permite obtener resultados
+                    funcionales,
+                    creativos y de alta calidad.</p>
+            </div>
+            <div class="justify-content-center align-items-center text-center">
+                <img class="d-block w-100" src="../Imagenes/Trabajo en equipo.jpg" alt="Imagen representativa de Licen">
+            </div>
+            <div class="justify-content-center align-items-center text-center">
+                <h1 class="mt-3">¿Que ofrecemos?</h1>
+                <p class="textoDescriptivo">Sabemos que en todo desafio que encaramos encontraremos dificultades pero
+                    estaremos ahi cuando aparezcan.
+                    Traajando codo a codo para hacer de cada proyecto una obra unica.Trabajamos integralmente todas
+                    nuestras
+                    obras,
+                    involucrándonos para asegurar el mejor resultado, ofrecemos una solución “Llave en mano”. Daremos
+                    una
+                    respuesta
+                    integral a las necesidades, estudiando el diseño arquitectonico, los detalles esteticos y de
+                    decoracion,
+                    el efecto
+                    y la importancia de la iluminacion natural y artificail y el diseño grafico y señaletica cuando el
+                    proyecto lo requiera</p>
+            </div>
         </div>
-        <section class="textoDescriptivo">
-            <h2>¿Que ofrecemos?</h2>
-            <p>Sabemos que en todo desafio que encaramos encontraremos dificultades pero estaremos ahi cuando aparezcan.
-                Traajando codo a codo para hacer de cada proyecto una obra unica.Trabajamos integralmente todas nuestras
-                obras,
-                involucrándonos para asegurar el mejor resultado, ofrecemos una solución “Llave en mano”. Daremos una
-                respuesta
-                integral a las necesidades, estudiando el diseño arquitectonico, los detalles esteticos y de decoracion,
-                el efecto
-                y la importancia de la iluminacion natural y artificail y el diseño grafico y señaletica cuando el
-                proyecto lo requiera</p>
-        </section>
     </main>
 
     <footer class="bg-light estiloFooter">
