--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div>
 
-        <header id="header" class="d-flex flex-column justify-content-center">
+        <header>
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#"><img class="logoLicen" src="./Imagenes/Logo.jpg" alt="Logo"></a>
@@ -48,7 +48,7 @@
             </nav>
         </header>
 
-        <main id="imagenCentral" class="d-flex flex-column justify-content-center">
+        <main>
             <div class="" data-aos="zoom-in" data-aos-delay="100">
                 <div id="carouselExampleIndicators" class="carousel slide">
                     <div class="carousel-indicators">
@@ -86,15 +86,15 @@
             </div>
         </main>
 
-         <footer class="bg-light estiloFooter">
+         <footer>
             <div class="container-fluid">
                 <div class="row justify-content-center">
 
-                    <div class="col-lg-2 text-center align-items-center justify-content-center">
+                    <div class="col-lg-2 text-center">
                         <img class="logoLicen2" src="./Imagenes/Logo.jpg" id="Logo" alt="Logo Desarrollos Licen">
                     </div>
 
-                    <div class="col-lg-4 text-center align-items-center textoPiePaginas">
+                    <div class="col-lg-4 text-center textoPiePaginas">
                         <p>Licen SLR es un equipo de trabajo con 10 años de constante crecimiento.
                             Iniciando con tres personas en el equipo y al cabo de pocos años superan las 20 personas.
                             Desarrollamos proyectos de diferentes tipologias y dimensiones alcanzando proyectos de
@@ -102,11 +102,11 @@
                         </p>
                     </div>
 
-                    <div class="col-lg-2 text-center align-items-center justify-content-center infoAdicional">
+                    <div class="col-lg-2 text-center infoAdicional">
                         <h2>¿Donde estamos?<br />Calle falsa 456</h2>
                     </div>
                     
-                    <div class="col-lg-2 row justify-content-center text-center align-items-center enlacesRedes">
+                    <div class="col-lg-2 row text-center align-items-center enlacesRedes">
                         <div>
                             <a class="col-lg-4" href="http://www.facebook.com/?locale=es_LA" target="_blank"
                                 rel="noopener noreferrer">
@@ -123,7 +123,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-2 text-center align-items-center justify-content-center enlacesRedes2">
+                    <div class="col-lg-2 text-center align-items-center enlacesRedes2">
                         <a href="./Paginas/Contacto.html">Unete al equipo</a><br />
                         <a href="./Paginas/Contacto.html">Contacto</a>
                     </div>
