--- a/Paginas/Contacto.html
+++ b/Paginas/Contacto.html
@@ -12,39 +12,41 @@
 </head>
 
 <body>
-    <header class="estiloHeader">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+
+    <header>
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"></a>
-                <img class="logoLicen" src="../Imagenes/Logo.jpg" alt="Logo">
+                <a class="navbar-brand" href="#"><img class="logoLicen" src="../Imagenes/Logo.jpg" alt="Logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ubNav">
-                        <li class="nav-item">
-                            <a class="nav-link active " aria-current="page" href="../index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./SobreNosotros.html">Sobre
-                                Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./Proyectos.html">Proyectos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./Servicios.html">Servicios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Contacto</a>
-                        </li>
-                    </ul>
+                    <div class="row justify-content-center">
+                        <ul class="nav-menu me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="./SobreNosotros.html">Sobre Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="./Proyectos.html">Proyectos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="./Servicios.html">Servicios</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="#">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </nav>
     </header>
+    
     <main>
         <section>
             <div class="titulosContactos">
@@ -97,37 +99,53 @@
             </div>
         </section>
     </main>
-    <footer class="estiloFooter GrillaFooter">
-        <div>
-            <img class="logoLicen2" src="../Imagenes/Logo.jpg" id="Logo" alt="Logo Desarrollos Licen">
-        </div>
-        <div class="textoPiePaginas">
-            <p>Licen SLR es un equipo de trabajo con 10 años de constante crecimiento.
-                Iniciando con tres personas en el equipo y al cabo de pocos años superan las 20 personas.
-                Desarrollamos proyectos de diferentes tipologias y dimensiones alcanzando proyectos de 40.0000m2 de
-                envergadura
-            </p>
-        </div>
-        <div class="infoAdicional">
-            <h2>¿Donde estamos?</h2>
-            <ul class="infoAdicional">
-                <li>Calle falsa 456</li>
-            </ul>
-        </div>
-        <div class="enlacesRedes">
-            <a href="http://www.facebook.com/?locale=es_LA" target="_blank" rel="noopener noreferrer"><iconify-icon
-                    icon="devicon:facebook"></iconify-icon></a>
-            <a href="http://www.instagram.com/" target="_blank" rel="noopener noreferrer"><iconify-icon
-                    icon="skill-icons:instagram"></iconify-icon></a>
-            <a href="http://www.linkedin.com/home" target="_blank" rel="noopener noreferrer"><iconify-icon
-                    icon="devicon:linkedin"></iconify-icon></a>
-        </div>
-        <div class="enlacesRedes2">
-            <a href="./Contacto.html">Unete al equipo</a>
-            <a href="./Contacto.html">Contacto</a>
-        </div>
+
+     <footer>
+        <div class="container-fluid">
+            <div class="row justify-content-center">
+
+                <div class="col-lg-2 text-center">
+                    <img class="logoLicen2" src="../Imagenes/Logo.jpg" id="Logo" alt="Logo Desarrollos Licen">
+                </div>
+
+                <div class="col-lg-4 text-center textoPiePaginas">
+                    <p>Licen SLR es un equipo de trabajo con 10 años de constante crecimiento.
+                        Iniciando con tres personas en el equipo y al cabo de pocos años superan las 20 personas.
+                        Desarrollamos proyectos de diferentes tipologias y dimensiones alcanzando proyectos de
+                        40.0000m2 de envergadura
+                    </p>
+                </div>
+
+                <div class="col-lg-2 text-center infoAdicional">
+                    <h2>¿Donde estamos?<br />Calle falsa 456</h2>
+                </div>
+                
+                <div class="col-lg-2 row text-center align-items-center enlacesRedes">
+                    <div>
+                        <a class="col-lg-4" href="http://www.facebook.com/?locale=es_LA" target="_blank"
+                            rel="noopener noreferrer">
+                            <iconify-icon icon="devicon:facebook"></iconify-icon>
+                        </a>
+                        <a class="col-lg-4" href="http://www.instagram.com/" target="_blank"
+                            rel="noopener noreferrer">
+                            <iconify-icon icon="skill-icons:instagram"></iconify-icon>
+                        </a>
+                        <a class="col-lg-4" href="http://www.linkedin.com/home" target="_blank"
+                            rel="noopener noreferrer">
+                            <iconify-icon icon="devicon:linkedin"></iconify-icon>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="col-lg-2 text-center align-items-center enlacesRedes2">
+                    <a href="#">Unete al equipo</a><br />
+                    <a href="#">Contacto</a>
+                </div>
+
+            </div>
         </div>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
