--- a/Paginas/Proyectos.html
+++ b/Paginas/Proyectos.html
@@ -48,45 +48,48 @@
     </header>
 
     <main>
-        <section>
-            <h1 class="tituloPgServicios">Proyectos</h1>
-        </section>
-        <section>
-            <h2 class="tituloSecundario">Viviendas</h2>
-            <div class="imagenesViviendas">
-                <img src="../Imagenes/Vivienda UF.jpg" class="imagenVivienda1" alt="Imagen de una vivienda UF">
-                <img src="../Imagenes/Vivienda PH.jpg" class="imagenVivienda2" alt="Imagen de una vivienda PH">
+        <div class="row justify-content-center align-items-center">
+            <h1 class="text-center">Viviendas</h1>
+            <div class="col-lg-6 mt-2 mb-2">
+                <img src="../Imagenes/Vivienda UF.jpg" class="imagenes" alt="Imagen de una vivienda UF">
             </div>
-        </section>
-        <section>
-            <h2 class="tituloSecundario">Clinicas</h2>
-            <div class="imagenesViviendas">
-                <img src="../Imagenes/Clinica 1.jpg" class="imagenClinica1" alt="Imagen de una Clinica">
-                <img src="../Imagenes/Clinica 2.jpg" class="imagenclinica2" alt="Imagen de una Clinica">
+            <div class="col-lg-6 mt-2 mb-2">
+                <img src="../Imagenes/Vivienda PH.jpg" class="imagenes" alt="Imagen de una vivienda UF">
             </div>
-        </section>
-        <section>
-            <h2 class="tituloSecundario">Gastronomia</h2>
-            <div class="imagenesViviendas">
-                <img src="../Imagenes/Local gastronomico 1.jpg" class="imagenGastro1"
-                    alt="Imagen de una local Gastronomico">
-                <img src="../Imagenes/Local Gastr 2.jpg" class="imagenGastro2" alt="Imagen de un loca gastronomico">
+
+            <h1 class="text-center">Clinicas</h1>
+            <div class="col-lg-6 mt-2 mb-2">
+                <img src="../Imagenes/Clinica 1.jpg" class="imagenes" alt="Imagen de una vivienda UF">
             </div>
-        </section>
-        <section>
-            <h2 class="tituloSecundario">Hoteleria y entretenimiento</h2>
-            <div class="imagenesViviendas">
-                <img src="../Imagenes/Hotel 2.jpg" class="imagenHotel" alt="Imagen de un hotel">
-                <img src="../Imagenes/Entretenimiento 2.jpg" class="imagenTeatro" alt="Imagen de un Salon">
+            <div class="col-lg-6 mt-2 mb-2">
+                <img src="../Imagenes/Clinica 2.jpg" class="imagenes" alt="Imagen de una vivienda UF">
             </div>
-        </section>
-        <section>
-            <h2 class="tituloSecundario">Predios</h2>
-            <div class="imagenesViviendas">
-                <img src="../Imagenes/Gym 1.jpg" class="imagenGym" alt="Imagen de una obra en un predio">
-                <img src="../Imagenes/Predios 2.jpg" class="imagenPadel" alt="Imagen de una obra en un predio">
+
+            <h1 class="text-center">Gastronomia</h1>
+            <div class="col-lg-6 mt-2 mb-2">
+                <img src="../Imagenes/Local gastronomico 1.jpg" class="imagenes" alt="Imagen de una vivienda UF">
             </div>
-        </section>
+            <div class="col-lg-6 mt-2 mb-2">
+                <img src="../Imagenes/Local Gastr 2.jpg" class="imagenes" alt="Imagen de una vivienda UF">
+            </div>
+
+            <h1 class="text-center">Hoteleria y entretenimiento</h1>
+            <div class="col-lg-6 mt-2 mb-2">
+                <img src="../Imagenes/Hotel 1.jpg" class="imagenes" alt="Imagen de una vivienda UF">
+            </div>
+            <div class="col-lg-6 mt-2 mb-2">
+                <img src="../Imagenes/Hotel 2.jpg" class="imagenes" alt="Imagen de una vivienda UF">
+            </div>
+
+            <h1 class="text-center">Predios</h1>
+            <div class="col-lg-6 mt-2 mb-2">
+                <img src="../Imagenes/Gym 1.jpg" class="imagenes" alt="Imagen de una vivienda UF">
+            </div>
+            <div class="col-lg-6 mt-2 mb-2">
+                <img src="../Imagenes/Entretenimiento 2.jpg" class="imagenes" alt="Imagen de una vivienda UF">
+            </div>
+
+        </div>
     </main>
 
     <footer>
