--- a/Paginas/Servicios.html
+++ b/Paginas/Servicios.html
@@ -48,63 +48,59 @@
     </header>
 
     <main>
-        <section>
-            <h1 class="tituloPgServicios">Servicios</h1>
-        </section>
-        <section class="ubicacionElementos">
-            <div class="estiloDeTextoServicios">
+        <div class="row align-items-center">
+            <div class="col-lg-6 text-center mt-2 mb-2 center-block">
                 <h2>Diseño Arquitectónico</h2>
-                <p>Estudiamos y analizamos las necesidades de los usuarios para brindar un proyecto arquitectonico que
+                <p class="textoDescriptivo">Estudiamos y analizamos las necesidades de los usuarios para brindar un
+                    proyecto arquitectonico que
                     cumpla con todas las necesidades de funcionalidad teniendo en cuenta los usos de los ambientes, las
                     circulaciones, los espacios privados y los espacios publico sin perder el foco en la necesidad
                     especfica de los usuarios.
                 </p>
             </div>
-            <div class="imagenArquitectonico">
-                <img src="../Imagenes/Diseño Arquitectonico.jpg" class="imagenArquitectonico"
-                    alt="Planta de arquitectura">
+            <div class="col-lg-6 mt-2 mb-2">
+                <img src="../Imagenes/Diseño Arquitectonico.jpg" class="imagenes" alt="Planta de arquitectura">
             </div>
-        </section>
-        <section class="ubicacionElementos">
-            <div>
-                <img src="../Imagenes/Proyecto de iluminacion.jpg" class="ImagenIlumincion"
-                    alt="Render de ilumninacion">
-            </div>
-            <div class="estilostextoIluminacion">
+
+            <div class="col-lg-6 text-center mt-2 mb-2 center-block">
                 <h2>Proyecto de Iluminación</h2>
-                <p>Trabajamos en equipo con estudios de iluminacion especificos para cada proyecto brindando el detalle
+                <p class="textoDescriptivo">Trabajamos en equipo con estudios de iluminacion especificos para cada
+                    proyecto brindando el detalle
                     estetico como tambien dando la correcta iluminacion a cada ambiente para dar el mejor resultado de
                     confort para los usuarios.</p>
             </div>
-        </section>
-        <section class="ubicacionElementos">
-            <div class="estiloDeTextoServicios">
+            <div class="col-lg-6 text-center mt-2 mb-2">
+                <img src="../Imagenes/Proyecto de iluminacion.jpg" class="imagenes" alt="Render de ilumninacion">
+            </div>
+
+            <div class="col-lg-6 text-center mt-2 mb-2 center-block">
                 <h2>Decoracion y estilo</h2>
-                <p>Parte de nuestro staff se dedica exclusivamente a aportar ideas moderanas y decorativas en conjunto
+                <p class="textoDescriptivo">Parte de nuestro staff se dedica exclusivamente a aportar ideas moderanas y
+                    decorativas en conjunto
                     con el estudio de iluminacion para darnos los detalles de materialidades, artefactos, equipamientos
                     y adornos. Dando como resultado un exclente combinacion entre la arquitectura, la iluminacion y el
                     diseño interior para cada ambiente.
                 </p>
             </div>
-            <div>
-                <img src="../Imagenes/Diseño Interior.jpg" class="imagenDiseñoInterior"
-                    alt="Render de Diseño de interiores">
+            <div class="col-lg-6 text-center mt-2 mb-2">
+                <img src="../Imagenes/Diseño Interior.jpg" class="imagenes" alt="Render de Diseño de interiores">
             </div>
-        </section>
-        <section class="ubicacionElementos">
-            <div>
-                <img src="../Imagenes/Señaletica.jpg" class="imagenGrafica" alt="Imagen de grafica y señaletica">
-            </div>
-            <div class="estilostextoIluminacion">
+
+            <div class="col-lg-6 text-center mt-2 mb-2 center-block">
                 <h2>Diseño grafico y señaletica</h2>
-                <p>Muchos de nuestros proyectos requieren un aporte desde el diseño grafico. Esta parte del diseño no
+                <p class="textoDescriptivo">Muchos de nuestros proyectos requieren un aporte desde el diseño grafico.
+                    Esta parte del diseño no
                     suele estar muy involucrada en la arquitectura pero mpara nuestro equipo es un elemento fundamental
                     para la trasabilidad de los usuarios por los ambientes realizados. Generando una armonioa
                     circulacion y apreciacion de los espacios, dando un efecto satisfactorio en el uso de los espacios y
                     los edificios de gran envergadura.
                 </p>
             </div>
-        </section>
+            <div class="col-lg-6 text-center mt-2 mb-2">
+                <img src="../Imagenes/Señaletica.jpg" class="imagenes" alt="Imagen de grafica y señaletica">
+            </div>
+
+        </div>
     </main>
 
     <footer>
@@ -126,15 +122,14 @@
                 <div class="col-lg-2 text-center infoAdicional">
                     <h2>¿Donde estamos?<br />Calle falsa 456</h2>
                 </div>
-                
+
                 <div class="col-lg-2 row text-center align-items-center enlacesRedes">
                     <div>
                         <a class="col-lg-4" href="http://www.facebook.com/?locale=es_LA" target="_blank"
                             rel="noopener noreferrer">
                             <iconify-icon icon="devicon:facebook"></iconify-icon>
                         </a>
-                        <a class="col-lg-4" href="http://www.instagram.com/" target="_blank"
-                            rel="noopener noreferrer">
+                        <a class="col-lg-4" href="http://www.instagram.com/" target="_blank" rel="noopener noreferrer">
                             <iconify-icon icon="skill-icons:instagram"></iconify-icon>
                         </a>
                         <a class="col-lg-4" href="http://www.linkedin.com/home" target="_blank"
