--- a/Paginas/SobreNosotros.html
+++ b/Paginas/SobreNosotros.html
@@ -101,15 +101,14 @@
                 <div class="col-lg-2 text-center infoAdicional">
                     <h2>¿Donde estamos?<br />Calle falsa 456</h2>
                 </div>
-                
+
                 <div class="col-lg-2 row text-center align-items-center enlacesRedes">
                     <div>
                         <a class="col-lg-4" href="http://www.facebook.com/?locale=es_LA" target="_blank"
                             rel="noopener noreferrer">
                             <iconify-icon icon="devicon:facebook"></iconify-icon>
                         </a>
-                        <a class="col-lg-4" href="http://www.instagram.com/" target="_blank"
-                            rel="noopener noreferrer">
+                        <a class="col-lg-4" href="http://www.instagram.com/" target="_blank" rel="noopener noreferrer">
                             <iconify-icon icon="skill-icons:instagram"></iconify-icon>
                         </a>
                         <a class="col-lg-4" href="http://www.linkedin.com/home" target="_blank"
@@ -131,7 +130,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-        <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 </body>
