Creo que con este ya queda

--- a/Paginas/Proyectos.html
+++ b/Paginas/Proyectos.html
@@ -54,39 +54,39 @@
                 <img src="../Imagenes/Vivienda UF.jpg" class="imagenes" alt="Imagen de una vivienda UF">
             </div>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Vivienda PH.jpg" class="imagenes" alt="Imagen de una vivienda UF">
+                <img src="../Imagenes/Vivienda PH.jpg" class="imagenes" alt="Imagen de un edificio PH">
             </div>
 
             <h1 class="text-center">Clinicas</h1>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Clinica 1.jpg" class="imagenes" alt="Imagen de una vivienda UF">
+                <img src="../Imagenes/Clinica 1.jpg" class="imagenes" alt="Imagen de una pasillo de clinica">
             </div>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Clinica 2.jpg" class="imagenes" alt="Imagen de una vivienda UF">
+                <img src="../Imagenes/Clinica 2.jpg" class="imagenes" alt="Imagen de una recepcion de clinica">
             </div>
 
             <h1 class="text-center">Gastronomia</h1>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Local gastronomico 1.jpg" class="imagenes" alt="Imagen de una vivienda UF">
+                <img src="../Imagenes/Local gastronomico 1.jpg" class="imagenes" alt="Imagen de una local gastronomico">
             </div>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Local Gastr 2.jpg" class="imagenes" alt="Imagen de una vivienda UF">
+                <img src="../Imagenes/Local Gastr 2.jpg" class="imagenes" alt="Imagen de un patio de comidas">
             </div>
 
             <h1 class="text-center">Hoteleria y entretenimiento</h1>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Hotel 1.jpg" class="imagenes" alt="Imagen de una vivienda UF">
+                <img src="../Imagenes/Hotel 1.jpg" class="imagenes" alt="Imagen de una habitacion de hotel">
             </div>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Hotel 2.jpg" class="imagenes" alt="Imagen de una vivienda UF">
+                <img src="../Imagenes/Hotel 2.jpg" class="imagenes" alt="Imagen de una habitacion de hotel">
             </div>
 
             <h1 class="text-center">Predios</h1>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Gym 1.jpg" class="imagenes" alt="Imagen de una vivienda UF">
+                <img src="../Imagenes/Gym 1.jpg" class="imagenes" alt="Imagen de un gimnasio">
             </div>
             <div class="col-lg-6 mt-2 mb-2">
-                <img src="../Imagenes/Entretenimiento 2.jpg" class="imagenes" alt="Imagen de una vivienda UF">
+                <img src="../Imagenes/Entretenimiento 2.jpg" class="imagenes" alt="Imagen de un teatro">
             </div>
 
         </div>
